Week9_p1 refactor